# moshon-sdr

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MEMORY.md  README.md  REVIEW-CHECKLIST.md
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: bridge-release.yml  ci.yml  claude-review.yml  deploy.yml
agent_docs/: code_patterns.md  product_requirements.md  project_brief.md  tech_stack.md  testing.md
bridge/: .goreleaser.yaml  go.mod  main.go  main_test.go
docs/: DoD-v0.1.0.md  PRD-Moshon-SDR-MVP.md  TechDesign-Moshon-SDR-MVP.md  hardware-test-plan.md  overnight-2026-05-23.md  research-moshon-sdr.md
dsp/: Cargo.toml
dsp/src/: lib.rs
web/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/public/: _headers  audio-processor.js
web/src/: App.svelte  app.css
web/src/lib/audio/: audio-pipeline.ts  iq-recorder.svelte.ts  iq-wav-encoder.ts  recorder.svelte.ts  wav-encoder.ts
web/src/lib/data/: iaru-bands.ts
web/src/lib/dsp/: adsb-parser.ts  cw-decoder.ts  smeter.ts  wasm-placeholder.ts
web/src/lib/ring/: sab-ring.ts
web/src/lib/state/: aircraft.svelte.ts  memory-channels.svelte.ts  tuning.svelte.ts  url-hash.ts
web/src/lib/ui/: AircraftPanel.svelte  FrequencyEntry.svelte  HotkeyHelp.svelte  LoraPanel.svelte  MemoryChannels.svelte  NetworkConnect.svelte  Onboarding.svelte  Section.svelte  SpectrumWaterfall.svelte  SweepPanel.svelte  (+1 more)
web/src/workers/: dsp-worker.ts  hackrf-worker.ts  network-worker.ts  usb-worker.ts
web/tests/e2e/: smoke.spec.ts
(+8 files in other folders)
