[package]
name = "moshon-dsp"
version = "0.1.0"
edition = "2021"
publish = false
description = "DSP core for Moshon SDR — Rust→WASM. FFT, filtering, demodulation."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

# The real DSP deps land in later milestones (B3+):
#   rustfft = "6"      # B4
#   web-sys with SharedArrayBuffer/AudioWorkletNode features
# Keeping the v0.1 crate minimal so `cargo build` is fast and the smoke test
# only verifies the WASM toolchain works end-to-end.

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
