[package]
name = "moshon-dsp"
version = "0.1.0"
edition = "2021"
publish = false
description = "DSP core for Moshon SDR — Rust→WASM. FFT, filtering, demodulation."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
rustfft = "6"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# wasm-pack 0.15 ships a wasm-opt too old for the bulk-memory ops modern rustc
# emits by default. We rely on Rust's own opt-level=3 + LTO until wasm-pack
# bundles a newer binaryen. Track: https://github.com/rustwasm/wasm-pack/issues/1442
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
